--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,12 @@
     <string name="profile_likes_sum">12K</string>
     <string name="profile_likes">Likes</string>
     <string name="profile_date">Date</string>
+
+    <!--  BUTTON  -->
+    <string name="button_next">NEXT</string>
+    <string name="button_started">GET STARTED</string>
+    <string name="button_login">LOGIN</string>
+    <string name="button_register">REGISTER</string>
+    <string name="button_upload">UPLOAD</string>
+    <string name="button_make_post">Make a Post</string>
 </resources>
