add item layout for recycle view posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,9 @@
     <string name="profile_likes">Likes</string>
     <string name="profile_date">Date</string>
     <string name="profile_posts">Posts</string>
+    <string name="profile_batik_name">Batik Name</string>
+    <string name="date_posted">10 May</string>
+    <string name="total_likes">129</string>
 
     <!--  BUTTON  -->
     <string name="button_next">NEXT</string>
@@ -57,5 +60,6 @@
     <string name="button_register">REGISTER</string>
     <string name="button_upload">UPLOAD</string>
     <string name="button_make_post">Make a Post</string>
+
 
 </resources>
