--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">UlikBatik</string>
+    <string name="app_name2">Ulik Batik</string>
 
     <!--  CONSTANTA  -->
     <string name="username">username</string>
     <string name="password">password</string>
     <string name="email">e-mail</string>
+    <string name="description">Description</string>
     <string name="batik_name">Batik Name</string>
     <string name="batik_loc">Batik Location</string>
+    <string name="catalog">Catalog</string>
+    <string name="searchbar_hint">Search</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam orci urna, molestie ut ullamcorper ac, tempor quis velit. Praesent ut purus quis neque varius vestibulum. Donec id imperdiet ante, gravida vehicula est. Donec aliquet varius congue. Sed hendrerit at quam vitae pulvinar. Vivamus varius, metus vel sagittis lacinia, nulla justo dictum magna, aliquet aliquam augue neque sit amet enim. Nam porttitor, sapien a tincidunt fringilla, mi ipsum ornare ex, interdum eleifend enim neque sed mauris. Vestibulum et laoreet libero.</string>
     <string name="lorem_short" tools:ignore="TypographyEllipsis">Lorem ipsum dolor sit amet ...</string>
 
@@ -35,7 +40,8 @@
     <string name="dashboard_likes">LIKES</string>
 
     <!--  DRAWER  -->
-    <string name="drawer_setting">Settings</string>
+    <string name="drawer_hello">Hello !</string>
+    <string name="drawer_setting">SETTINGS</string>
     <string name="drawer_dark_mode">Dark Mode</string>
     <string name="drawer_my_account">My Account</string>
     <string name="drawer_language">Language</string>
@@ -47,7 +53,8 @@
     <!--  PROFILE  -->
     <string name="profile_likes_sum">12K</string>
     <string name="profile_likes">Likes</string>
-    <string name="profile_date">Date</string>
+    <string name="profile_posts">Post</string>
+    <string name="profile_date">10 May</string>
 
     <!--  BUTTON  -->
     <string name="button_next">NEXT</string>
@@ -56,4 +63,27 @@
     <string name="button_register">REGISTER</string>
     <string name="button_upload">UPLOAD</string>
     <string name="button_make_post">Make a Post</string>
+
+    <!--  CONTENT DESCRIPTION  -->
+    <string name="img_icon_description">IMG_ICON</string>
+    <string name="img_field_description">IMG_FIELD</string>
+    <string name="cam_description">CAM_BTN</string>
+    <string name="back_button_description">BACK_BTN</string>
+    <string name="gallery_description">GALLERY_BTN</string>
+    <string name="grid_description">GRID_BTN</string>
+    <string name="list_description">LIST_BTN</string>
+    <string name="rv_post_description">RV_POST</string>
+
+
+    <!--  DRAWER BUILD IN  -->
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
