--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,14 @@
 
     <!--  CONSTANTA  -->
     <string name="username">username</string>
+    <string name="username2">Username</string>
     <string name="password">password</string>
     <string name="email">e-mail</string>
     <string name="description">Description</string>
     <string name="batik_name">Batik Name</string>
     <string name="batik_loc">Batik Location</string>
     <string name="catalog">Catalog</string>
+    <string name="save">Save</string>
     <string name="searchbar_hint">Search</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam orci urna, molestie ut ullamcorper ac, tempor quis velit. Praesent ut purus quis neque varius vestibulum. Donec id imperdiet ante, gravida vehicula est. Donec aliquet varius congue. Sed hendrerit at quam vitae pulvinar. Vivamus varius, metus vel sagittis lacinia, nulla justo dictum magna, aliquet aliquam augue neque sit amet enim. Nam porttitor, sapien a tincidunt fringilla, mi ipsum ornare ex, interdum eleifend enim neque sed mauris. Vestibulum et laoreet libero.</string>
@@ -56,6 +58,9 @@
     <string name="profile_likes">Likes</string>
     <string name="profile_posts">Post</string>
     <string name="profile_date">10 May</string>
+    <string name="profile_edit">Edit Profile</string>
+    <string name="profile_image">Profile Picture</string>
+    <string name="profile_edit_image">Change Image</string>
 
     <!--  BUTTON  -->
     <string name="button_next">NEXT</string>
