--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,5 @@
     <string name="error_invalid_input">Invalid Input</string>
     <string name="error_invalid_data">Invalid Email or Password</string>
     <string name="error_match">Password not match</string>
-
+    <string name="password_error_8">Password must be at least 8 characters</string>
 </resources>
