--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,12 @@
     <string name="image_failed_to_detected">image failed to detected</string>
     <string name="username_should_not_empty">username should not empty</string>
 
+    <!--    Dialog -->
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+    <string name="question_delete_post">Are you sure you want to delete this post?</string>
+    <string name="delete_post">Delete Post</string>
+    <string name="logout_from_your_account">Logout from your account?</string>
+    <string name="logout">Logout</string>
+
 </resources>
