styling logic profile scroll

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,5 +138,6 @@
     <string name="deskripsi_dialog">Deskripsi dialog</string>
     <string name="you_re_image_can_t_detected_as_batik">You\'re image can\'t detected as Batik</string>
     <string name="retry">Retry</string>
+    <string name="upload_your_batik">Upload your Batik</string>
 
 </resources>
