--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -125,4 +125,5 @@
     <string name="title_dialog">Title Dialog</string>
     <string name="deskripsi_dialog">Deskripsi dialog</string>
     <string name="retry">Coba Lagi</string>
+    <string name="upload_your_batik">Unggah Batikmu</string>
 </resources>
