cleaning code and fix design styling bug

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -126,4 +126,6 @@
     <string name="deskripsi_dialog">Deskripsi dialog</string>
     <string name="retry">Coba Lagi</string>
     <string name="upload_your_batik">Unggah Batikmu</string>
+    <string name="fyp">Anda mungkin menyukai ini</string>
+    <string name="upload_successful">Unggahan Berhasil</string>
 </resources>
